kube/puffers-bridge-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: puffers-bridge
  name: puffers-bridge
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      service: puffers-bridge
  template:
    metadata:
      labels:
        service: puffers-bridge
    spec:
      containers:
      - env:
        - name: PGUSER
          valueFrom:
            secretKeyRef:
              name: puffers-bridge-postgres
              key: user
        - name: PGPASSWORD
          valueFrom:
            secretKeyRef:
              name: puffers-bridge-postgres
              key: password
        - name: SEEDPHRASE
          valueFrom:
            secretKeyRef:
              name: puffers-bridge-postgres
              key: seedphrase
        - name: SECRET_TOKEN
          valueFrom:
            secretKeyRef:
              name: puffers-bridge-postgres
              key: secrettoken
        - name: PGHOST
          value: puffers-bridge-postgres
        - name: PGPORT
          value: "5932"
        - name: PGDATABASE
          value: "bridge"
        - name: DERIVATIONPATH
          value: "m/44'/145'/0'/0/0"
        - name: NETWORK
          value: "mainnet"
        - name: TOKENID
          value: "8ded0441eab6fdb69560b396594861eb38b515bf98353e2b4d7ebdf388ebbec2"
        - name: CONTRACTADDR
          value: "0x88fA0495d5E9C1B178EAc1D76DF9D729e39fD8E8"
        - name: SERVER_URL
          value: "puffers.reapers.cash"
        image: zquestz/puffers-bridge:latest
        imagePullPolicy: Always
        name: puffers-bridge
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "100Mi"
      restartPolicy: Always
