kube/puffers-bridge-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: puffers-bridge-postgres
  name: puffers-bridge-postgres
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      service: puffers-bridge-postgres
  template:
    metadata:
      labels:
        service: puffers-bridge-postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: puffers-bridge-postgres
              key: password
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              name: puffers-bridge-postgres
              key: user
        - name: PGDATA
          value: /var/lib/postgresql/data
        - name: POSTGRES_DB
          value: bridge
        image: postgres
        name: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: puffers-bridge-postgres-data
        resources:
          requests:
            memory: "256Mi"
      restartPolicy: Always
      volumes:
        - name: puffers-bridge-postgres-data
          gcePersistentDisk:
            pdName: puffers-bridge-postgres-data
            fsType: ext4
