kube/puffers-bridge-postgres-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: puffers-bridge-postgres
  namespace: default
spec:
  ports:
    - port: 5932
      targetPort: 5432
  selector:
    service: puffers-bridge-postgres
