kube/puffers-bridge-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: puffers-bridge
  namespace: default
spec:
  ports:
    - port: 889
      targetPort: 3000
  selector:
    service: puffers-bridge
  type: NodePort
