kube/puffers-bridge-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puffers-bridge-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - puffers.reapers.cash
    secretName: puffers-bridge-tls
  defaultBackend:
    service:
      name: puffers-bridge
      port:
        number: 889
  rules:
  - host: puffers.reapers.cash
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: puffers-bridge
            port:
              number: 889
